# raspberry-pi-surveillance-robot

./: .env.example  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  rtc.conf
.github/workflows/: main.yml  node-command.yml  server.yml  web.yml
client/: .env.docker  Dockerfile  entrypoint.sh  pyproject.toml
client/src/: main.py  mqtt_service.py
client/src/commands/common/: direction.py
client/src/commands/gimbal/: gimbal.py  servo.py
client/src/commands/movement/: motor.py  movement.py
client/src/commands/streamer/: streamer.py
client/src/messages/: __init__.py  gimbal.py  message.py  movement.py  stream.py
core/: Dockerfile  tsconfig.json
core/src/types/socket/: Events.ts  Gimbal.ts  Movement.ts  Stream.ts
server/: .env.docker  Dockerfile  nest-cli.json  p2.json  package-lock.json  package.json  tsconfig.json
server/src/: app.module.ts  main.ts
server/src/authorization/: authorization.controller.ts  authorization.module.ts
server/src/config/: authorization.ts  mqtt.ts  server.ts  websockets.ts
server/src/mqtt/: mqtt.module.ts  mqtt.service.ts  providers.ts
server/src/websockets/: websockets.gateway.ts  websockets.module.ts
web/: .env.docker  .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: main.ts  socket.ts  state.ts
web/src/assets/: main.css
web/src/components/: RobotMovement.vue  StreamPlayer.vue
web/src/components/RobotMovement/: Index.vue  Keyboard.vue  Mobile.vue
web/src/views/: HomeView.vue
